force-app/main/default/objects/Volunteer_Activity__c/fields/Total_Board_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Board_Hours__c</fullName>
    <description>Total hours spent for an organization for a year on Board Activity.</description>
    <label>Total Board Hours</label>
    <summarizedField>Volunteer_Board_Activity__c.Duration__c</summarizedField>
    <summaryForeignKey>Volunteer_Board_Activity__c.Volunteer_Activity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>