force-app/main/default/objects/Volunteer_Activity__c/fields/Total_Number_of_Participants__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Participants__c</fullName>
    <description>COUNT of Volunteer Activity Participant records</description>
    <label>Current Participants</label>
    <summaryForeignKey>Volunteer_Activity_Participant__c.Volunteer_Activity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>