force-app/main/default/objects/Volunteer_Activity__c/fields/Total_Volunteer_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Volunteer_Hours__c</fullName>
    <description>SUM of Duration (hours) - Participant on Volunteer Activity Participant records</description>
    <label>Total Volunteer Hours</label>
    <summarizedField>Volunteer_Activity_Participant__c.Duration_hours__c</summarizedField>
    <summaryForeignKey>Volunteer_Activity_Participant__c.Volunteer_Activity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>