force-app/main/default/objects/Volunteer_Activity__c/fields/User_Profile__c.field-meta.xml
<CustomField>
    <fullName>User_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User_Profile</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Volunteer_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>