force-app/main/default/objects/Volunteer_Activity__c/fields/Volunteer_Events__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Events__c</fullName>
    <label>Activity Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Beautification/Cleaning/Painting/Gardening</fullName>
            </value>
            <value>
                <fullName>Business Assistance</fullName>
            </value>
            <value>
                <fullName>CRA Community Contact</fullName>
            </value>
            <value>
                <fullName>CRA Community Outreach</fullName>
            </value>
            <value>
                <fullName>Education/Training/Tutoring</fullName>
            </value>
            <value>
                <fullName>Faith-based</fullName>
            </value>
            <value>
                <fullName>Fundraising/Event Management</fullName>
            </value>
            <value>
                <fullName>Mentoring/leadership development</fullName>
            </value>
            <value>
                <fullName>Professional Skills</fullName>
            </value>
            <value>
                <fullName>Walks/Runs/Parades/Booth/Table</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Building/Construction/Rehabilitation/Home Maintenance</fullName>
            </value>
            <value>
                <fullName>Community Event Participation</fullName>
            </value>
            <value>
                <fullName>Food serving/distributing/sorting/delivering</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Health Care and Social Services</fullName>
            </value>
            <value>
                <fullName>Disaster/Emergency Services</fullName>
            </value>
            <value>
                <fullName>Civic Participation/Political</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>