force-app/main/default/objects/Volunteer_Activity__c/fields/Volunteer_Organization__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer Organization</label>
    <referenceTo>Volunteer_Organization__c</referenceTo>
    <relationshipName>Volunteering</relationshipName>
    <type>Lookup</type>
</CustomField>