force-app/main/default/objects/Volunteer_Activity__c/fields/Volunteer_Organization_Intranet__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Organization_Intranet__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field will pre-populate from the intranext submission</inlineHelpText>
    <label>Volunteer Organization - Intranet</label>
    <length>50</length>
    <type>Text</type>
</CustomField>