force-app/main/default/objects/Volunteer_Activity__c/recordTypes/Activity_Record.recordType-meta.xml
<RecordType>
    <fullName>Activity_Record</fullName>
    <active>true</active>
    <label>Activity Record</label>
</RecordType>