force-app/main/default/objects/Volunteer_Activity__c/recordTypes/Board_Committee_Meeting.recordType-meta.xml
<RecordType>
    <fullName>Board_Committee_Meeting</fullName>
    <active>true</active>
    <description>This is what used to go in the Employee Board Memberships object</description>
    <label>Board/Committee Meeting</label>
</RecordType>