force-app/main/default/objects/Volunteer_Activity__c/recordTypes/Event_Record.recordType-meta.xml
<RecordType>
    <fullName>Event_Record</fullName>
    <active>true</active>
    <label>Event Record</label>
</RecordType>