force-app/main/default/objects/Volunteer_Activity__c/recordTypes/Intranet_Activity_Record.recordType-meta.xml
<RecordType>
    <fullName>Intranet_Activity_Record</fullName>
    <active>true</active>
    <description>This record type is automatically selected when users submit an activity via the intranet</description>
    <label>Intranet Activity Record</label>
</RecordType>