force-app/main/default/objects/Volunteer_Activity__c/validationRules/Activity_Requires_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>Activity_Requires_Time</fullName>
    <active>true</active>
    <description>Volunteer Activity requires time and place, opportunity does not.</description>
    <errorConditionFormula>AND(
  NOT( IsOpportunity__c ),
  OR(
     ISNULL( Date_and_Time__c ) 
  )
)</errorConditionFormula>
    <errorDisplayField>Date_and_Time__c</errorDisplayField>
    <errorMessage>Date and Time is required for a Volunteer Activity.
If this opportunity is not associated with a date and time, please check the Ongoing Opportunity checkbox.</errorMessage>
</ValidationRule>