force-app/main/default/objects/Volunteer_Activity__c/validationRules/Duration_must_be_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Duration_must_be_positive</fullName>
    <active>false</active>
    <description>Duration must be a positive number of hours</description>
    <errorConditionFormula>OR ( Duration_hours__c  &lt; 0,
    AND (
        ISNULL(Duration_hours__c ) ,
        IsOpportunity__c = false
    )
)</errorConditionFormula>
    <errorDisplayField>Duration_hours__c</errorDisplayField>
    <errorMessage>Duration must be a positive number of hours</errorMessage>
</ValidationRule>