force-app/main/default/objects/Volunteer_Activity__c/validationRules/Duration_must_be_set.validationRule-meta.xml
<ValidationRule>
    <fullName>Duration_must_be_set</fullName>
    <active>false</active>
    <description>Duration must be set for non-ongoing opportunities</description>
    <errorConditionFormula>AND (
    ISNULL(Duration_hours__c ) ,
    IsOpportunity__c = false
)</errorConditionFormula>
    <errorDisplayField>Duration_hours__c</errorDisplayField>
    <errorMessage>Duration is required if the Ongoing Opportunity checkbox is not checked.</errorMessage>
</ValidationRule>