force-app/main/default/objects/Volunteer_Activity__c/validationRules/MaxParticipants.validationRule-meta.xml
<ValidationRule>
    <fullName>MaxParticipants</fullName>
    <active>true</active>
    <errorConditionFormula>Max_Number_of_Participants__c  &lt;  Total_Number_of_Participants__c</errorConditionFormula>
    <errorDisplayField>Max_Number_of_Participants__c</errorDisplayField>
    <errorMessage>The maximum participants value cannot be less than the number of current participants.</errorMessage>
</ValidationRule>