force-app/main/default/objects/Volunteer_Activity__c/validationRules/Organization_is_Inactive.validationRule-meta.xml
<ValidationRule>
    <fullName>Organization_is_Inactive</fullName>
    <active>false</active>
    <description>Cannot add activities for organizations that are inactive.</description>
    <errorConditionFormula>AND(
ISNEW(),
ISPICKVAL(Volunteer_Organization__r.Status__c , &quot;Inactive&quot;)
)</errorConditionFormula>
    <errorMessage>Cannot add activities for organizations that are inactive.</errorMessage>
</ValidationRule>